--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,7 +5,7 @@
 <div class="">
 
     <div class="col-3">   
-        <h1>Ushuaia</h1>
+        <h1>{{ place }}</h1>
     </div>
 
     <div class="col-3">   
